# visualodometry

./: .gitignore  analyser.m  correlaton2.m  model.m  mousePathRender.m  testFAST.m  testParalel.m
Project/: FAST.m  algorithm.m  basic.m  clearCam.m  cornerSim.m  correlaton.m  dinamicCalc.m  graphError.m  graphs.m  interf.m  kin.m  matching.m  pathGen.m  refConv.m  runFAST.m  runReal.m  runRealOffline.m  runRealOfflineSW.m  sht.m  sig.m  simulation.m  testMapping.m  testingAngle.m
Project/data/single/: data_1(1_2).mat  data_1(4_5_eq).mat  data_1(7_8).mat  data_1(7_8_eq).mat
Project/extras/: calibrateCaptor.m  cleanner.m  giveCMD.m  paper.m  sucess.m
backups/attempts/temp/: package-lock.json
backups/web0/attempts/temp/: index.html
backups/web0/functions/: package.json
backups/web0/testfullstack/: math.js  scripts.js
cpp/: CMakeLists.txt  create_builds.sh
cpp/code/: CMakeLists.txt
cpp/code/include/: basic.h  cbridge.h  generator.h  generator.hpp  generator_cbridge.h  geometry.hpp  json_bridge.hpp  pixels_generate.hpp  pixels_generator.hpp  pixels_generator_cbridge.h
cpp/code/src/: basic.c  cbridge.c  generator.cpp  generator_cbridge.cpp  geometry.cpp  json_bridge.cpp  mainapp.cpp  pixels_generator.cpp  pixels_generator_cbridge.cpp
cpp/code/tst/: test_generator.cpp  test_pixels_generate.cpp  test_pixels_generator.cpp  test_pixels_generator_cbridge.cpp
cpp/include/: pixels_generate.hpp
cpp/src/: Basic.c  Geometry.cpp  mainapp.cpp  pixels_generate.cpp
cpp/tst/: testGeometry.cpp  test_geometry.cpp  test_pixels_generate.cpp
data/maps/: map_1.mat
data/single/: data_1(1_2_eq).mat  data_1(4_5).mat  data_1(5_6).mat
matlab/: captor.m  control.m  cornerSim.m  errorRelationData.mat  geometry.m  matching.m  runAnalyser.m  runCornerGen.m  runFullSimulation.m  testCam.m
matlab/data/single/: data_1(2_3).mat  data_1(2_3_eq).mat  data_1(3_4).mat  data_1(3_4_eq).mat  data_1(6_7).mat
matlab/extras/: escrever em ficheiro.m
matlab/testlibs/: Basic.h  basic.h  generator_cbridge.h  pixels_generator_cbridge.h  testCalllib.m  testCalllibBasic.m  testCalllibGen.m  testCalllibPixelsGen.m
testweb/attempts/: ffi_issues.txt
testweb/attempts/public/: script.js
testweb/attempts/temp/: package-lock.json
testweb/fullstack/: ip.json  package-lock.json  package.json
testweb/web0/: package-lock.json
testweb/web0/functions/: index.js  package-lock.json  package.json
video/V3/: trans.mat
web/: .gitignore  package-lock.json
web/attempts/temp/: script.js
web/attempts/testfullstack/: server.js
web/functions/: hw  index.js  package-lock.json  package.json  vodometry
web/functions/lib/: vodometry
web/public/: .script.js.kate-swp  index.html  pixels_generator.js  script.js
web/public/experiments/canvas/: index.html  script.js  style.css
web/public/experiments/hover_static/: index.html
web/public/experiments/hover_style/: index.html
web/public/experiments/svg/: index.html
web/temp/: package-lock.json
web/testfullstack/: package-lock.json  package.json  server.js
web0/: .firebaserc
web0/attempts/2/: script.js
web0/functions/: index.js
web0/testfullstack/: index.html
